# example_robot_data

./: README.md
python/example_robot_data/: robots_loader.py
robots/flying_arm_3_description/urdf/: flying_arm_3.urdf
robots/flying_arm_5_description/urdf/: flying_arm_1.urdf  flying_arm_5.urdf
robots/hexacopter370_description/urdf/: hexacopter370.urdf  hexacopter370_flying_arm_1.urdf  hexacopter370_flying_arm_3.urdf  hexacopter370_flying_arm_5.urdf
robots/hexacopter680_description/urdf/: hexacopter680_flying_arm_2.urdf
robots/hextilt_description copy/urdf/: hextilt.urdf  hextilt_flying_arm_5.urdf
robots/iris_description/robots/: iris_pepms.urdf
robots/s500_description/meshes/: link_1.STL  link_3.STL
robots/s500_description/s500_quadrotor/: CMakeLists.txt  package.xml
robots/s500_description/s500_quadrotor/config/: joint_names_s500_quadrotor.yaml
robots/s500_description/s500_quadrotor/launch/: display.launch  gazebo.launch
robots/s500_description/s500_quadrotor/meshes/: rotor_1.STL  rotor_2.STL  rotor_3.STL  rotor_4.STL
robots/s500_description/s500_quadrotor/urdf/: s500_quadrotor.csv  s500_quadrotor.urdf  s500_simple.urdf
robots/s500_description/s500_uam/: CMakeLists.txt  package.xml
robots/s500_description/s500_uam/launch/: display.launch  gazebo.launch
robots/s500_description/s500_uam/meshes/: link_2.STL  link_4.STL
robots/s500_description/s500_uam/urdf/: s500.urdf  s500_uam.csv  s500_uam.sdf  s500_uam.urdf  s500_uam_simple.urdf
robots/s500_description/urdf/: s500.urdf  s500_uam.urdf
